syntax = "proto3";

package auth;

option go_package = "auth-service/proto/auth";

// Auth Service Definition
service AuthService {
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc GetUserByID(GetUserByIDRequest) returns (GetUserByIDResponse);
  rpc GetUserByEmail(GetUserByEmailRequest) returns (GetUserByEmailResponse);
}

// Messages
message User {
  string id = 1;
  string email = 2;
  string name = 3;
  string role = 4;
  string created_at = 5;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  User user = 2;
  string message = 3;
}

message GetUserByIDRequest {
  string user_id = 1;
}

message GetUserByIDResponse {
  bool success = 1;
  User user = 2;
  string message = 3;
}

message GetUserByEmailRequest {
  string email = 1;
}

message GetUserByEmailResponse {
  bool success = 1;
  User user = 2;
  string message = 3;
}
